--- a/server/package.json
+++ b/server/package.json
@@ -9,17 +9,18 @@
     "dev": "nodemon ./src/index.ts"
   },
   "dependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongoose": "^8.6.0",
+    "express": "^4.21.1",
+    "mongoose": "^8.8.2",
     "nodemon": "^3.1.4",
     "ts": "^0.2.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "4.17.17",
+    "@types/node": "^22.9.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
