--- a/server/package.json
+++ b/server/package.json
@@ -9,19 +9,21 @@
     "dev": "nodemon ./src/index.ts"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.3",
     "@types/mongoose": "^5.11.97",
+    "@types/nodemon": "^1.19.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "express": "4.21.1",
     "mongoose": "^8.8.2",
     "nodemon": "^3.1.4",
     "ts": "^0.2.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/express": "4.17.17",
+    "@types/express": "4.17.13",
     "@types/node": "^22.9.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.6.3"
   }
 }
